Replace Gradle plugin for AsciiDoctor with own integration, as plugin is stuck on an old library version